# pub

./: tf-pipe.yaml
advanced security/: README.md  advanced-security-auto-fix.yml  advanced-security-pipeline-v2.yml  security-fix-config.yml  security_alert_fixer.py  update-python-dependencies.yml
advanced security/debug/: DEBUGGING-GUIDE.md  dependency_security_fixer.py
advanced security/uv/: DEPENDENCY-README.md  dependency-security-pipeline.yml  dependency_security_fixer.py
advanced security/v2/: DEPENDENCY-README.md  dependency-security-pipeline.yml  dependency_security_fixer.py
app-config-console/: Dockerfile  README.md  pyproject.toml
app-config-web/: Dockerfile  README.md  app.py  azure_app_config.py  pyproject.toml
bicep/: README.md  appServicePlan.bicep  azure-bicep-pipeline.yml  bicepconfig.json  webApp.bicep
bicep-pipeline/infra/: main.bicep
bicep-pipeline/infra/modules/: appInsights.bicep  storage.bicep
bicep-pipeline/infra/parameters/: dev.parameters.json  prod.parameters.json  staging.parameters.json
bicep2.1/: README.md
bicep2.1/bicep/: bicepconfig.json
bicep2.1/bicep/components/keyVault/: main.bicep
bicep2.1/pipelines/: azure-pipelines.yml
bicep2.1/pipelines/template/: deploy-environment.yml
ftd/: DEPLOYMENT.md  FILE_LIST.md  MANIFEST.txt  PIPELINE_VARIABLES.md  QUICKSTART.md  README.md  RUNBOOK.md  START_HERE.md  azure-pipelines-enhanced.yml  azure-pipelines-multi-device.yml  azure-pipelines-simple.yml  azure-pipelines.yml  restart_ftd.py  setup-azure-resources.sh  setup-keyvault.sh  test_connectivity.py  validate_ftd.py
(+14 files in other folders)
